Changed format of Departures, fixed resource classes
