# TimetableService/api/src/main/kotlin/si/travelbuddy/StopResource.kt
@@ -5,10 +5,12 @@ import io.ktor.server.request.*
 import io.ktor.server.resources.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
+import io.ktor.server.routing.Route
 import io.ktor.server.routing.put
 import kotlinx.serialization.Serializable
 import org.jetbrains.exposed.sql.transactions.transaction
 import si.travelbuddy.dto.StopDto
+import si.travelbuddy.entity.*
 import si.travelbuddy.entity.StopDAO
 import si.travelbuddy.entity.StopTable
 import si.travelbuddy.entity.StopTimeDAO
@@ -18,7 +20,7 @@ import java.time.LocalTime
 @Resource("/stop")
 class StopResource {
     @Resource("{id}")
-    class Id(val parent: StopsResource = StopsResource(), val id: String) {
+    class Id(val parent: StopResource = StopResource(), val id: String) {
         @Resource("departures")
         class Departures(val parent: Id,
                          val from: Long = LocalTime.MIN.toSecondOfDay().toLong(),
@@ -43,7 +45,13 @@ fun Route.stopRoute(service: StopService) {
     @Serializable
     data class Departure(
         val depTime: String,
-        val routeName: String? = null,
+        val route: si.travelbuddy.entity.Route,
+    )
+
+    @Serializable
+    data class Departures(
+        val stop: Stop? = null,
+        val departures: List<Departure>
     )
 
     get<StopResource.Id.Departures> { dep ->
@@ -58,12 +66,12 @@ fun Route.stopRoute(service: StopService) {
                 val trip = stopTime.tripId
                 val route = trip.routeId
 
-                res.add(Departure(stopTime.departureTime.toString(), route.routeLongName))
+                res.add(Departure(stopTime.departureTime.toString(), route.toModel()))
             }
 
             res.sortBy { it.depTime }
 
-            res
+            Departures(StopDAO.findById(dep.parent.id)?.toModel(), res.toList())
         })
     }
 }
