# TimetableService/resources/openapi/documentation.yaml
@@ -4,7 +4,7 @@ info:
   description: "travel_buddy API"
   version: "1.0.0"
 servers:
-- url: "https://0.0.0.0:8080"
+- url: "https://travel_buddy"
 paths:
   /gtfs/import:
     post:
@@ -14,11 +14,6 @@ paths:
     delete:
       description: ""
       parameters:
-      - name: "parent"
-        in: "query"
-        required: false
-        schema:
-          type: "object"
       - name: "id"
         in: "path"
         required: true
@@ -27,11 +22,6 @@ paths:
     get:
       description: ""
       parameters:
-      - name: "parent"
-        in: "query"
-        required: false
-        schema:
-          type: "object"
       - name: "id"
         in: "path"
         required: true
@@ -49,11 +39,6 @@ paths:
     put:
       description: ""
       parameters:
-      - name: "parent"
-        in: "query"
-        required: false
-        schema:
-          type: "object"
       - name: "id"
         in: "path"
         required: true
@@ -69,11 +54,6 @@ paths:
     get:
       description: ""
       parameters:
-      - name: "parent"
-        in: "query"
-        required: false
-        schema:
-          type: "object"
       - name: "id"
         in: "path"
         required: true
